--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -39,7 +39,9 @@
               <a class="nav-link text-white" href="#">My Wishlists</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/seller_register/<%= current_user['user_id'] %>">Open Store</a>
+              <% unless seller_registered?(current_user['user_id']) %>
+                <a class="nav-link text-white" href="/seller_register/<%= current_user['user_id'] %>">Open Store</a>
+              <% end %>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="/logout">Log Out</a>
