update user template

--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -21,10 +21,7 @@
               <a class="nav-link active text-warning" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Items</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-item text-white" href="/user_profile/<%= current_user['user_id'] %>">User</a>
+              <a class="nav-link text-white" href="/user_profile/<%= current_user['user_id'] %>">User Profile</a>
             </li>
           </ul>
 
