upda seller page

--- a/views/seller/index.erb
+++ b/views/seller/index.erb
@@ -23,13 +23,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <h1 class="text-uppercase my-5 mx-5">Hello <%= current_user['name'] %></h1>
+            <h1 class="text-uppercase">Hello <%= current_user['name'] %></h1>
         </div>
     </div>
 </div>
-
-<p class="mx-3">William Tanuwijaya</p>
-
-<p class="mb-5">Xabi Alonso</p>
-
-<p>Nadiem Makarim</p>
