--- a/views/user/index.erb
+++ b/views/user/index.erb
@@ -1,15 +1,29 @@
 <div class="container mt-5">
-    <div class="row">
-        <div class="col mb-4">
-            <% if session[:success] %>
+    <% if flash[:warning] %>
+        <div class="row">
+            <div class="col mb-4">
+                
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                        <strong><%= flash[:warning] %></strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+            </div>
+        </div>
+        <% flash[:warning] = nil %>
+    <% end %>
+
+    <% if session[:success] %>
+        <div class="row">
+            <div class="col mb-4">
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
                     <strong><%= session[:success] %></strong>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
-                <% session[:success] = nil %>
-            <% end %>
+            </div>
         </div>
-    </div>
+        <% session[:success] = nil %>
+    <% end %>
+
     <div class="row">
         <div class="col">
             <h1>Hello <%= current_user['name'] %></h1>
