--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Dashboard</li>
+        <li class="breadcrumb-item active">User Lists</li>
     </ol>
     <div class="row">
         <div class="col-xl-3 col-md-6">
@@ -44,7 +44,7 @@
     <div class="card mb-4">
         <div class="card-header">
             <i class="fas fa-table me-1"></i>
-            DataTable Example
+            User Lists
         </div>
         <div class="card-body">
             <% if session[:success] %>
