--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -10,7 +10,7 @@
                 <div class="sb-sidenav-menu-heading">Addons</div>
                 <a class="nav-link" href="/seller_lists">
                     <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                    User Lists
+                    Seller Lists
                 </a>
                 <a class="nav-link" href="tables.html">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
