--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -7,7 +7,11 @@
                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     Dashboard
                 </a>
-                <div class="sb-sidenav-menu-heading">Addons</div>
+                <div class="sb-sidenav-menu-heading">Lists</div>
+                <a class="nav-link" href="/admin">
+                    <div class="sb-nav-link-icon"><i class="fas fa-chart-users"></i></div>
+                    User Lists
+                </a>
                 <a class="nav-link" href="/seller_lists">
                     <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                     Seller Lists
