--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -8,12 +8,12 @@
                     Dashboard
                 </a>
                 <div class="sb-sidenav-menu-heading">Lists</div>
-                <a class="nav-link" href="/admin">
-                    <div class="sb-nav-link-icon"><i class="fas fa-chart-users"></i></div>
+                <a class="nav-link" href="/user_lists">
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                     User Lists
                 </a>
                 <a class="nav-link" href="/seller_lists">
-                    <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                    <div class="sb-nav-link-icon"><i class="fa-solid fa-user-tie"></i></div>
                     Seller Lists
                 </a>
                 <a class="nav-link" href="tables.html">
