--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -41,12 +41,8 @@
             </div>
         </div>
     </div>
-    <div class="card mb-4">
-        <div class="card-header">
-            <i class="fas fa-table me-1"></i>
-            User Lists
-        </div>
-        <div class="card-body">
+    <div class="row">
+        <div class="col">
             <% if session[:success] %>
                 <div class="alert alert-success alert-dismissible fade show" role="alert">
                     <strong><%= session[:success] %></strong>
@@ -54,71 +50,6 @@
                 </div>
                 <% session[:success] = nil %>
             <% end %>
-            <table id="datatablesSimple">
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>Name</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Birthdate</th>
-                        <th>Address</th>
-                        <th>Phone</th>
-                        <th>Photo</th>
-                        <th>Access</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% @users.each_with_index do |user, index| %>
-                    <tr>
-                        <td><%= index + 1 %></td>
-                        <td><%= user['name'] %></td>
-                        <td><%= user['username'] %></td>
-                        <td><%= user['email'] %></td>
-                        <td><%= user['birthdate'] %></td>
-                        <td><%= user['address'] %></td>
-                        <td><%= user['phone']%></td>
-                        <td>
-                            <% if user['photo'] %>
-                                <img src="/uploads/users/<%= user['photo']%>" alt="<%= user['username']%>" style="max-width: 100px"/>
-                            <% else %>
-                                <p>No Photo Available</p>
-                            <% end %>
-                        </td>
-                        <th><%= user['access']%></th>
-                        <th>
-                            <div class="btn-group" role="group" aria-label="Button Group">
-                                <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= user['user_id']%>">Delete</button>
-                                <a href="/detail_user/<%= user['user_id']%>" class="btn btn-info text-white">View</a>
-                                <a href="/edit_user/<%= user['user_id']%>" class="btn btn-primary">Edit</a>
-                            </div>
-                        </th>
-                    </tr>
-
-                    <!-- Modal -->
-                    <div class="modal fade" id="deleteModal<%= user['user_id'] %>" tabindex="-1" aria-labelledby="deleteModalLabel<%= user['user_id'] %>" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h3 class="modal-title fs-5" id="deleteModalLabel<%= user['user_id']%>">Confirm Deletion</h3>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    Are you sure want to delete this User ?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <form action="/delete_user/<%= user['user_id'] %>" method="POST">
-                                        <button type="submit" class="btn btn-primary">Delete</button>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <% end %>
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
