--- a/views/admin/user_dashboard/user_lists.erb
+++ b/views/admin/user_dashboard/user_lists.erb
@@ -1,23 +1,3 @@
-<%
-    english_months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
-
-    birthdate = Date.parse(@user['birthdate'])
-    rescue nil 
-
-    formatted_birthdate = birthdate ? "#{birthdate.day} #{english_months[birthdate.month - 1]} #{birthdate.year}" : ''
-
-    # calculated the age 
-    today = Date.today 
-    age = if birthdate 
-        age = today.year - birthdate.year 
-        age -= 1 if (today.month < birthdate.month) || (today.month == birthdate.month && today.day < birthdate.day)
-        age 
-    else 
-        nil
-    end  
-%> 
-
-
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
@@ -44,6 +24,7 @@
                         <th>Username</th>
                         <th>Email</th>
                         <th>Birthdate</th>
+                        <th>Age</th>
                         <th>Address</th>
                         <th>Phone</th>
                         <th>Photo</th>
@@ -52,7 +33,37 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <% @users.each_with_index do |user, index| %>
+                    <% 
+                        english_months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
+
+                        today = Date.today
+
+                        @users.each_with_index do |user, index| 
+                            begin 
+                                birthdate = user['birthdate'] ? Date.parse(user['birthdate']) :  nil 
+
+                                formatted_birthdate = if birthdate
+                                    "#{birthdate.day} #{english_months[birthdate.month - 1]} #{birthdate.year}"
+                                else 
+                                    ''
+                                end 
+
+                                age = if birthdate
+                                    calculated_age = today.year - birthdate.year
+
+                                    calculated_age -= 1 if (today.month < birthdate.month) || (today.month == birthdate.month && today.day < birthdate.day)
+                                    calculated_age
+                                else 
+                                    nil
+                                end 
+                            rescue => e 
+                                formatted_birthdate = 'Invalid date'
+                                
+                                age = nil 
+                                # Consider logging the error: puts "Error parsing birthdate for user #{user['user_id']}: #{e.message}"
+
+                            end     
+                    %>
                     <tr>
                         <td><%= index + 1 %></td>
                         <td><%= user['name'] %></td>
