update button size of btn-group

--- a/views/admin/user_dashboard/user_lists.erb
+++ b/views/admin/user_dashboard/user_lists.erb
@@ -82,7 +82,7 @@
                         </td>
                         <th><%= user['access']%></th>
                         <th>
-                            <div class="btn-group" role="group" aria-label="Button Group">
+                            <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
                                 <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= user['user_id']%>">Delete</button>
                                 <a href="/detail_user/<%= user['user_id']%>" class="btn btn-info text-white">View</a>
                                 <a href="/edit_user/<%= user['user_id']%>" class="btn btn-primary">Edit</a>
