--- a/views/admin/seller_dashboard/seller_lists.erb
+++ b/views/admin/seller_dashboard/seller_lists.erb
@@ -53,10 +53,9 @@
                             </td>
                             <td><%= seller['address'] %></td>
                             <td>
-                                <div class="btn-group" role="group" aria-label="Button Group">
+                                <div class="btn-group-sm btn-group" role="group" aria-label="Button Group">
                                     <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#">Delete</button>
                                     <a href="#" class="btn btn-info text-white">View</a>
-                                    <a href="#" class="btn btn-primary">Edit</a>
                                 </div>
                             </td>
                         </tr>
