--- a/views/layouts/seller/sidebar.erb
+++ b/views/layouts/seller/sidebar.erb
@@ -10,7 +10,7 @@
                 <div class="sb-sidenav-menu-heading">Addons</div>
                 <a class="nav-link" href="#">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                    Tables
+                    Item Lists
                 </a>
             </div>
         </div>
