update menu access in admin sidebar view

--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -8,6 +8,7 @@
                     Dashboard
                 </a>
                 <div class="sb-sidenav-menu-heading">Lists</div>
+                <% if current_user['access'].to_i == 3 %>
                 <a class="nav-link" href="/user_lists">
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                     User Lists
@@ -16,10 +17,12 @@
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-user-tie"></i></div>
                     Seller Lists
                 </a>
-                <a class="nav-link" href="tables.html">
+                <% elsif current_user['access'].to_i == 2 %>
+                <a class="nav-link" href="#">
                     <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                     Item Lists
                 </a>
+                <% end %>
             </div>
         </div>
     </nav>
