--- a/views/layouts/seller/layout.erb
+++ b/views/layouts/seller/layout.erb
@@ -1,6 +1,6 @@
 <%= erb :"layouts/seller/header" %>
 <%= erb :"layouts/seller/navbar" %>
-<%= erb :"layouts/seller/sidebar" %>
+<%= erb :"layouts/admin/sidebar" %>
 
 <div id="layoutSidenav_content">
     <main>
