--- a/views/layouts/seller/layout.erb
+++ b/views/layouts/seller/layout.erb
@@ -1,10 +1,10 @@
-<%= erb :"layouts/seller/header" %>
-<%= erb :"layouts/seller/navbar" %>
+<%= erb :"layouts/admin/header" %>
+<%= erb :"layouts/admin/navbar" %>
 <%= erb :"layouts/admin/sidebar" %>
 
 <div id="layoutSidenav_content">
     <main>
         <%= yield %>
     </main>
-    <%= erb :"layouts/seller/footer" %>
+    <%= erb :"layouts/admin/footer" %>
 </div>
