--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -3,13 +3,19 @@
         <div class="sb-sidenav-menu">
             <div class="nav">
                 <div class="sb-sidenav-menu-heading">Core</div>
-
-                <div class="sb-sidenav-menu-heading">Lists</div>
                 <% if current_user['access'].to_i == 3 %>
                     <a class="nav-link" href="/admin">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Dashboard
                     </a>
+                <% elsif current_user['access'].to_i == 2 %>    
+                    <a class="nav-link" href="#">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                        Dashboard
+                    </a>
+                <% end %>
+                <div class="sb-sidenav-menu-heading">Lists</div>
+                <% if current_user['access'].to_i == 3 %>
                     <a class="nav-link" href="/user_lists">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-users"></i></div>
                         User Lists
@@ -19,10 +25,6 @@
                         Seller Lists
                     </a>
                 <% elsif current_user['access'].to_i == 2 %>
-                    <a class="nav-link" href="#">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Dashboard
-                    </a>
                     <a class="nav-link" href="#">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Item Lists
