adding view_seller page

--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -29,6 +29,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Item Lists
                     </a>
+                    <a class="nav-link" href="#">
+                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        Transactions
+                    </a>
                 <% end %>
             </div>
         </div>
