--- a/views/layouts/admin/navbar.erb
+++ b/views/layouts/admin/navbar.erb
@@ -18,7 +18,7 @@
               <% if current_user['access'].to_i == 3 %>
                 <li><a class="dropdown-item" href="/admin_view_profile/<%= current_user['user_id'] %>">Settings</a></li>
               <%elsif current_user['access'].to_i == 2 %>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
+                <li><a class="dropdown-item" href="/view_seller/<%= current_user['user_id'] %>">Settings</a></li>
               <% end %>
                 <li><a class="dropdown-item" href="">Activity Log</a></li>
                 <li><hr class="dropdown-divider" /></li>
