--- a/views/seller/seller_profile/view_seller.erb
+++ b/views/seller/seller_profile/view_seller.erb
@@ -85,10 +85,15 @@
                 </div>
             </div>
             <div class="mb-3 row">
-                <label for="access" class="col-sm-2 col-form-label">Access</label>
+                <label for="identity_photo" class="col-sm-2 col-form-label">Identity Verification</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="access" value="<%= @profile['access'] %>">
+                    <% if @seller_info['identity_photo'] %>
+                        <img src="/uploads/sellers/<%= @seller_info['identity_photo'] %>" style="max-width: 200px">
+                    <% else %>
+                        <span class="text-muted" >Not Provided</span>
+                    <% end %>
                 </div>
+
             </div>
             <!-- Edit Button -->
             <a class="btn btn-outline-success float-end" href="#">Edit My Profile</a>
