update sidebar.erb & main.rb

--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -9,7 +9,7 @@
                         Dashboard
                     </a>
                 <% elsif current_user['access'].to_i == 2 %>    
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="/seller_dashboard/<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Dashboard
                     </a>
