update add_my_store post

--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -49,9 +49,15 @@
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="photo" class="col-sm-2 col-form-label" for="photo">Photo</label>
+                    <label for="store_photo" class="col-sm-2 col-form-label" for="store_photo">Store Photo</label>
                     <div class="col-sm-10">
-                        <input class="form-control mt-2" type="file" id="photo" name="photo">
+                        <input class="form-control mt-2" type="file" id="store_photo" name="store_photo">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="store_banner" class="col-sm-2 col-form-label" for="store_banner">Store Banner</label>
+                    <div class="col-sm-10">
+                        <input class="form-control mt-2" type="file" id="store_banner" name="store_banner">
                     </div>
                 </div>
                 <div class="mb-3 row">
