update add_my_store page

--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Edit Admin Profile</li>
+        <li class="breadcrumb-item active">Adding Store Profile</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
@@ -49,15 +49,13 @@
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="store_photo" class="col-sm-2 col-form-label" for="store_photo">Store Photo</label>
-                    <div class="col-sm-10">
-                        <input class="form-control mt-2" type="file" id="store_photo" name="store_photo">
+                    <div class="col-md-6">
+                        <label for="store_photo" class="form-label" for="store_photo">Store Photo</label>
+                        <input class="form-control" type="file" id="store_photo" name="store_photo">
                     </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="store_banner" class="col-sm-2 col-form-label" for="store_banner">Store Banner</label>
-                    <div class="col-sm-10">
-                        <input class="form-control mt-2" type="file" id="store_banner" name="store_banner">
+                    <div class="col-md-6">
+                        <label for="store_banner" class="form-label" for="store_banner">Store Banner</label>
+                        <input class="form-control" type="file" id="store_banner" name="store_banner">
                     </div>
                 </div>
                 <div class="mb-3 row">
