update back to seller_dashboard link

--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -63,7 +63,7 @@
             </form>
 
             <!-- Back Button -->
-            <a class="btn btn-outline-secondary float-start" href="#">Back</a>
+            <a class="btn btn-outline-secondary float-start" href="/seller_dashboard/<%= current_user['user_id'] %>">Back</a>
         </div>
     </div>
 </div>
