--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -8,7 +8,7 @@
             <i class="fas fa-user me-1"></i>
         </div>
         <div class="card-body">
-            <form action="#" method="post" enctype="multipart/form-data">
+            <form action="/add_my_store/<%= current_user['user_id'] %>" method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <input type="hidden" name="_method" value="post">
                 </div>
